Fix logo being too large on phones

--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ img {
 }
 
 #header-logo {
-	padding-top: 27%;
+  max-width: 50%
 }
 
 .store_links {
